header color and bg-color

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,19 @@
+.App header {
+  background-color: #000;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .App header a {
   text-decoration: none;
   color: black;
 }
 
 h1 {
-  text-align: center;
+  color: #FCFCFC;
+  margin: 0;
 }
 
 .App_sections {
