--- a/src/FolderList/FolderList.css
+++ b/src/FolderList/FolderList.css
@@ -1,3 +1,22 @@
 .Folder_list {
-  
+  padding: 10px;
+}
+
+.Folder_list_item {
+  list-style-type: none;
+  padding: 10px;
+  font-size: 18px;
+  font-weight: 700;
+  border-bottom: 1px solid darkslategrey;
+}
+
+.Folder_list_item a {
+  color: #000;
+  text-decoration: none;
+}
+
+.Folder_note_count {
+  padding-left: 10px;
+  font-weight: 400;
+  color: darkslategrey;
 }
