--- a/src/MainNoteList/MainNoteList.css
+++ b/src/MainNoteList/MainNoteList.css
@@ -14,6 +14,11 @@
   color: black;
 }
 
+.Main_list_item a:hover {
+  cursor: pointer;
+  color: #444;
+}
+
 .Main_list_item a h3 {
   margin: 0;
   padding-bottom: 20px;
