--- a/src/MainNote/MainNote.css
+++ b/src/MainNote/MainNote.css
@@ -1,8 +1,6 @@
 .Main_note {
   margin: 10px;
   background-color: #fcf9f0;
-  border: 1px solid #777;
-  box-shadow: 0 7px 3px -3px #777;
-  padding: 10px;
+  box-shadow: 0 2px 10px -3px #777;  padding: 10px;
   border-radius: 5px;
 }
