--- a/src/MainNoteList/MainNoteList.css
+++ b/src/MainNoteList/MainNoteList.css
@@ -2,9 +2,9 @@
   background-color:#fcf9f0;
   list-style-type: none;
   padding: 10px;
-  border: 1px solid #777;
+  /* border: 1px solid #777; */
   border-radius: 5px;
-  box-shadow: 0 7px 3px -3px #777;
+  box-shadow: 0 2px 10px -3px #777;
   width: 400px;
   margin: 10px;
 }
