--- a/src/MainNoteList/MainNoteList.css
+++ b/src/MainNoteList/MainNoteList.css
@@ -7,6 +7,8 @@
   box-shadow: 0 2px 10px -3px #777;
   width: 400px;
   margin: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .Main_list_item a {
