--- a/src/MainNoteList/MainNoteList.css
+++ b/src/MainNoteList/MainNoteList.css
@@ -25,3 +25,23 @@
   margin: 0;
   padding-bottom: 20px;
 }
+
+
+.Main_note_add_link {
+  width: 500px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.Main_note_add_link a {
+  font-size: 16px;
+  font-weight: 600;
+  text-decoration: none;
+  color: black;
+}
+
+.Main_note_add_link a:hover {
+  text-decoration: underline;
+  color: gray;
+}
